--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "license": "ISC",
   "devDependencies": {
     "@graphql-codegen/cli": "2.12.0",
+    "@graphql-codegen/introspection": "2.2.1",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-resolvers": "2.7.3",
+    "@types/connect-redis": "0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/node": "^18.7.15",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2",
-    "@graphql-codegen/typescript": "2.7.3",
-    "@graphql-codegen/typescript-resolvers": "2.7.3",
-    "@graphql-codegen/introspection": "2.2.1"
+    "typescript": "^4.8.2"
   },
   "dependencies": {
     "@graphql-tools/load-files": "^6.6.1",
@@ -28,8 +30,10 @@
     "@graphql-tools/utils": "^8.11.0",
     "@graphql-yoga/node": "^2.13.13",
     "argon2": "^0.29.1",
+    "connect-redis": "^6.1.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "graphql": "^16.6.0",
     "ioredis": "^5.2.3",
     "pg": "^8.8.0",
